--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>app.minisax</title>
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta name="format-detection" content="telephone=no">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
