query string tune and tempo

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				<div id="input-overlay"></div>
 				<label for="tunes">Pick a Tune</label>
 				<select id="tunes-selector" name="tunes">
+					<option value="scale">Scale</option>
 					<option value="hpbd">Happy Birthday</option>
 					<option value="pink">Pink Panther</option>
 				</select>
@@ -58,7 +59,7 @@
 				<div id="tempo-overlay"></div>
 				<span class="tempo" id="default-tempo" data-tempo="1">Normal</span>
 				<span class="tempo" data-tempo="2">Slow</span>
-				<span class="tempo" data-tempo="4">Super Slow</span>
+				<span class="tempo" data-tempo="3">Super Slow</span>
 			</div>
 		</div>
 	</div>
