select tune dropdown styles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div id="input">
 			<form action="">
 				<div id="input-overlay"></div>
-				<label for="tunes">Pick a Tune</label>
+				<label for="tunes">Select a Tune</label>
 				<select id="tunes-selector" name="tunes">
 					<option value="scale">Scale</option>
 					<option value="hpbd">Happy Birthday</option>
