--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<select id="tunes-selector" name="tunes">
 					<option value="scale">Scale</option>
 					<option value="hpbd">Happy Birthday</option>
-					<option value="pink">Pink Panther</option>
+					<option value="mtk">Mack the Knife</option>
 				</select>
 				<!-- <input type="submit"> -->
 			</form>
