--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 	<div id="minisax-wrap">
+		<a id="logo" href="https://www.minisax.com"><img src="img/logo-minisax.png"></a>
 		<div id="minisax">
 			<div class="hole whole" id="hole7">
 				<div class="hole half" id="hole7-half"></div>
