added songs + # display

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<div id="minisax-wrap">
-		<a id="logo" href="https://www.minisax.com"><img src="img/logo-minisax.png"></a>
+		<a id="logo" href="https://www.minisax.com" target="_blank"><img src="img/logo-minisax.png"></a>
 		<div id="minisax">
 			<div class="hole whole" id="hole7">
 				<div class="hole half" id="hole7-half"></div>
@@ -58,6 +58,9 @@
 					<option value="scale">Scale</option>
 					<option value="hpbd">Happy Birthday</option>
 					<option value="mtk">Mack the Knife</option>
+					<option value="blmn">Blue Moon</option>
+					<option value="lvtd">Love Me Tender</option>
+					<option value="ystmb">Yes Sir! That's...</option>
 				</select>
 				<!-- <input type="submit"> -->
 			</form>
