--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 	</div>
-
-	<script type="text/javascript" src="js/app.js"></script>
+	<div id="ver">v.beta1</div>
+	<script type="text/javascript" src="js/app-min.js"></script>
 </body>
 </html>
