a ton of changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>app.minisax</title>
+	<title>app.MiniSax - Instantly Play the MiniSax</title>
 	<meta charset="UTF-8">
+	<meta name="description" content="Instantly jump into playing the Stainless Steel MiniSax">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+	<meta property="og:title" content="app.MiniSax - Instantly Play the MiniSax">
+	<meta property="og:description" content="Jump into playing the Stainless Steel MiniSax without knowing music theory or scores.">
+	<meta property="og:image" content="https://app.minisax.com/img/og.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
@@ -77,6 +86,6 @@
 		</div>
 	</div>
 	<div id="ver">v.beta1</div>
-	<script type="text/javascript" src="js/app-min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
