--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			</div>
 		</div>
 	</div>
-	<a href="mailto:app@minisax.com" id="feedback">Feedback <i class="material-icons-round">send</i></a>
+	<a href="mailto:app@minisax.com?subject=MiniSax App Feedback" id="feedback">Feedback <i class="material-icons-round">send</i></a>
 	<div id="ver">v.beta1 / <span>&copy;</span> <a href="https://www.minisax.com" target="_blank">MiniSax.com</a></div>
 	<script type="text/javascript" src="js/app-min.js"></script>
 </body>
