--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 					<option value="blmn">Blue Moon</option>
 					<option value="lvtd">Love Me Tender</option>
 					<option value="ystmb">Yes Sir! That's...</option>
+					<option value="jolly">Jolly Good Fellow</option>
+					<option value="summer">Summer Time</option>
 				</select>
 				<!-- <input type="submit"> -->
 			</form>
@@ -87,6 +89,6 @@
 	</div>
 	<a href="mailto:app@minisax.com?subject=MiniSax App Feedback" id="feedback">Feedback <i class="material-icons-round">send</i></a>
 	<div id="ver">v.beta1 / <span>&copy;</span> <a href="https://www.minisax.com" target="_blank">MiniSax.com</a></div>
-	<script type="text/javascript" src="js/app-min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
