--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 					<option value="ystmb">Yes Sir! That's...</option>
 					<option value="jolly">Jolly Good Fellow</option>
 					<option value="summer">Summer Time</option>
+					<option value="smile">Smile</option>
 				</select>
 				<!-- <input type="submit"> -->
 			</form>
